# specshrink

./: .codebase_learnings.json  .gitignore  README.md  init.sh  pyproject.toml
screenshots/: M2A-701-cli-output.txt  M2A-701-comprehensive-test-results.txt  M2A-701-final-summary.txt  M2A-701-pytest-output.txt  M2A-702-evidence-summary.md  M2A-702-final-verification.txt  M2A-702-scorer-tests.txt  M2A-702-test-case-1.txt  REGRESSION-TEST-FINAL-REPORT.txt  cli_demonstration.txt  regression-feature2-custom-threshold.txt  regression-overall-results.txt  regression-pytest-full-suite.txt  test_demo.html  test_results.txt
specshrink/: __init__.py  cli.py  parser.py  scorer.py  suggester.py
tests/: __init__.py  test_parser.py  test_scorer.py  test_suggester.py
tests/fixtures/: test_spec.txt
